Dark theme and update colors:
- Default status bar color: Indigo 500, (ff3f51b5)
- Accent color: (deep) Teal 500, (ff009688)
- Error color: Red 500, (fff44336)
- Display background color: DarkKat blue grey, (ff1b1f23)
- Default display text color: white, (ffffffff)
- Pad numeric background color: blue grey 900, (ff263238)
- Pad operator background color: blue grey 950, (ff384248)
- Pad advanced background color: (deep) Teal 500, (ff009688)
- Pad advanced text and icon color: white, (ffffffff)
- Pad button advanced ripple color: white, (ffffffff)

Conflicts:
	res/values/color.xml
	res/values/styles.xml
	src/com/android/calculator2/Calculator.java

--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -18,42 +18,45 @@
 <resources>
 
     <!-- Default background color for the status bar. -->
-    <color name="calculator_accent_color">#00BCD4</color>
+    <color name="calculator_primary_color">#ff3f51b5</color> <!-- Indigo 500 -->
+
+    <!-- Default accent color. -->
+    <color name="calculator_accent_color">#ff009688</color> <!-- Teal 500 -->
 
     <!-- Color to indicate an error has occured. -->
-    <color name="calculator_error_color">#F40056</color>
+    <color name="calculator_error_color">#fff44336</color> <!-- Red 500 -->
 
     <!-- Background color of the calculator display. -->
-    <color name="display_background_color">#FFF</color>
+    <color name="display_background_color">#ff1b1f23</color> <!-- DarkKat blue grey -->
 
     <!-- Text color for the formula in the calculator display. -->
-    <color name="display_formula_text_color">#8A000000</color>
+    <color name="display_formula_text_color">@android:color/white</color>
 
     <!-- Text color for the result in the calculator display. -->
-    <color name="display_result_text_color">#6C000000</color>
+    <color name="display_result_text_color">@android:color/white</color>
 
     <!-- Lighter color for exponent while scrolling. -->
     <color name="display_result_exponent_text_color">#40000000</color>
 
     <!-- Background color for the numeric pad. -->
-    <color name="pad_numeric_background_color">#434343</color>
+    <color name="pad_numeric_background_color">#ff263238</color> <!-- blue grey 900 -->
 
     <!-- Background color for the operator pad. -->
-    <color name="pad_operator_background_color">#636363</color>
+    <color name="pad_operator_background_color">#ff384248</color> <!-- blue grey 950 -->
 
     <!-- Background color for the advanced pad. -->
-    <color name="pad_advanced_background_color">#1DE9B6</color>
+    <color name="pad_advanced_background_color">@color/calculator_accent_color</color>
 
     <!-- Text color for a button in a pad. -->
-    <color name="pad_button_text_color">#FFF</color>
+    <color name="pad_button_text_color">@android:color/white</color>
 
     <!-- Text color for a button in the advanced pad. -->
-    <color name="pad_button_advanced_text_color">#99000000</color>
+    <color name="pad_button_advanced_text_color">@android:color/white</color>
 
     <!-- Ripple color when a button is pressed in a pad. -->
     <color name="pad_button_ripple_color">#33FFFFFF</color>
 
     <!-- Ripple color when a button is pressed in a pad. -->
-    <color name="pad_button_advanced_ripple_color">#1A000000</color>
+    <color name="pad_button_advanced_ripple_color">#33FFFFFF</color>
 
 </resources>
