--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,9 +17,9 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="Theme" parent="@android:style/Theme.Material.DarkActionBar">
+    <style name="Theme" parent="@android:style/Theme.Material">
         <item name="android:colorPrimaryDark">@color/calculator_primary_dark_color</item>
-        <item name="android:statusBarColor">@color/calculator_accent_color</item>
+        <item name="android:statusBarColor">@color/calculator_primary_dark_color</item>
         <item name="android:windowSoftInputMode">stateAlwaysHidden</item>
     </style>
 
